syntax = "proto3";
package pb;
option go_package = "gchat/pkg/protocol/pb";

import "google/protobuf/empty.proto";

service LogicExt {
  // Push a message to the room
  rpc PushRoom(PushRoomReq) returns (google.protobuf.Empty);

  // Send a message to a friend
  rpc SendMessageToFriend (SendMessageReq) returns (SendMessageResp);

  // Send a group message
  rpc SendMessageToGroup (SendMessageReq) returns (SendMessageResp);
}

message SendMessageReq {
  int64 receiver_id = 1; // Receiver ID, user ID/group ID
  bytes content = 2; // Message content
  int64 send_time = 3; // Message sending timestamp, accurate to milliseconds
}
message SendMessageResp {
  int64 seq = 1; // Message sequence number
}

message PushRoomReq {
  int64 room_id = 1; // Room ID
  int32 code = 2; // Message type
  bytes content = 3; // Message content
  int64 send_time = 4; // Message sending timestamp, accurate to milliseconds
  bool is_persist = 5; // Whether the message is persistent
  bool is_priority = 6; // Whether the message is sent with priority
}
